# rs-shapefile

./: Cargo.toml  README.md  build.rs
proto/: vector_tile.proto
src/: error.rs  geojson_reader.rs  gml_reader.rs  lib.rs  mvt_reader.rs  reader.rs
src/io/: binary_reader.rs  mod.rs
src/models/: attribute.rs  bbox.rs  crs.rs  geometry.rs  mod.rs  record.rs
src/parsers/: cpg_parser.rs  dbf_parser.rs  mod.rs  prj_parser.rs  shp_parser.rs
tests/: geojson_test.rs  gml_test.rs  helpers.rs  integration_test.rs  mvt_test.rs
tests/e2e/: mod.rs  n13_large_file.rs  real_files.rs
tests/property/: roundtrip.rs
