[package]
name    = "rs-shapefile"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A pure-Rust Shapefile reader for GIS data analysis"
license = "MIT"

[dependencies]
thiserror   = "1"
encoding_rs = "0.8"

# optional features
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
proptest    = "1"
tempfile    = "3"

[features]
default = []
geojson = ["serde", "serde_json"]

[[test]]
name = "property_roundtrip"
path = "tests/property/roundtrip.rs"

[[test]]
name = "e2e_real_files"
path = "tests/e2e/real_files.rs"

[profile.release]
opt-level = 3
lto       = true
