[package]
name    = "rs-shapefile"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A pure-Rust library for reading ESRI Shapefiles and GeoJSON"
license = "MIT"

[dependencies]
thiserror   = "1"
encoding_rs = "0.8"

# optional features
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
prost      = { version = "0.13", optional = true }
quick-xml  = { version = "0.37", features = ["encoding"], optional = true }

[dev-dependencies]
proptest    = "1"
tempfile    = "3"
prost-build = "0.13"

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[features]
default = []
geojson = ["serde", "serde_json"]
mvt     = ["prost", "prost-build"]
gml     = ["quick-xml"]

[[test]]
name = "property_roundtrip"
path = "tests/property/roundtrip.rs"

[[test]]
name = "e2e_real_files"
path = "tests/e2e/real_files.rs"

[[test]]
name = "geojson_test"
path = "tests/geojson_test.rs"
required-features = ["geojson"]

[[test]]
name = "mvt_test"
path = "tests/mvt_test.rs"
required-features = ["mvt"]

[[test]]
name = "gml_test"
path = "tests/gml_test.rs"
required-features = ["gml"]

[profile.release]
opt-level = 3
lto       = true
